@@ -10,6 +10,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       the remaining walltime in seconds. This field is does not account for
       weighted walltime.
   b - fixed erroneous display of walltime when start time hasn't been set
+  b - fixed possible segfault when finding remaining walltime (if the 
+      job's resources haven't been defined)
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
